--- a/templates/design.tmpl
+++ b/templates/design.tmpl
@@ -29,7 +29,27 @@
         </div>
     </div>
 
-    {{ .Kek }}
+    <table class="table table-striped table-hover ">
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Users Count</th>
+      </tr>
+      </thead>
+      <tbody>
+
+      {{ range .Memorandums}}
+      <tr>
+        <td>{{ .Id }}</td>
+        <td>{{ .UserCount }}</td>
+        <td><a href="/checkMemorandum/{{ .Id }}">Check memorandum</a></td>
+      </tr>
+      {{ end }}
+
+
+
+      </tbody>
+    </table>
 
 </div>
 <div id="black-block"></div>
