--- a/templates/checkMem.tmpl
+++ b/templates/checkMem.tmpl
@@ -42,6 +42,7 @@
       <tr>
         <td>{{ .MacAddr }}</td>
         <td>{{ .UserName }}</td>
+        <td>{{ .PhoneNumber }}</td>
       </tr>
       {{ end }}
       </tbody>
