--- a/templates/memorandums.tmpl
+++ b/templates/memorandums.tmpl
@@ -29,7 +29,7 @@
       <tr>
         <th>Id</th>
         <th>Users Count</th>
-        <th>Actions</th>
+        <th>Check</th>
       </tr>
       </thead>
       <tbody>
@@ -37,7 +37,7 @@
       <tr>
         <td>{{ .Id }}</td>
         <td>{{ .UserCount }}</td>
-        <td><a href="/checkMemorandum/{{ .Id }}">Check memorandum</a></td>
+        <td><a href="/admin/checkMemorandum/{{ .Id }}">Check memorandum</a></td>
       </tr>
       {{ end }}
       </tbody>
