--- a/templates/admin.tmpl
+++ b/templates/admin.tmpl
@@ -24,26 +24,11 @@
         </div>
     </div>
 
-    <a style="text-align:center" href="/admin/checkMemorandum/add/{{ .Id }}">Add memorandum</a>
-
-    <table class="table table-striped table-hover ">
-      <thead>
-      <tr>
-        <th>Mac</th>
-        <th>User mane</th>
-        <th>Phone number</th>
-      </tr>
-      </thead>
-      <tbody>
-      {{ range .Clients}}
-      <tr>
-        <td>{{ .MacAddr }}</td>
-        <td>{{ .UserName }}</td>
-        <td>{{ .PhoneNumber }}</td>
-      </tr>
-      {{ end }}
-      </tbody>
-    </table>
+    <form action="/admin/login/" method="post">
+        <input type="text" name="login">
+        <input type="password" name="password">
+        <input type="submit">
+    </form>
 
 </div>
 <div id="black-block"></div>
