Added showing accepted in memorandums page

--- a/templates/checkMem.tmpl
+++ b/templates/checkMem.tmpl
@@ -32,6 +32,7 @@
         <th>Mac</th>
         <th>User mane</th>
         <th>Phone number</th>
+        <th>Accepted</th>
       </tr>
       </thead>
       <tbody>
@@ -40,6 +41,7 @@
         <td>{{ .MacAddr }}</td>
         <td>{{ .UserName }}</td>
         <td>{{ .PhoneNumber }}</td>
+        <td>{{ .Accepted }}</td>
       </tr>
       {{ end }}
       </tbody>
