--- a/templates/memorandums.tmpl
+++ b/templates/memorandums.tmpl
@@ -13,14 +13,19 @@
     <div class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target=".navbar-responsive-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Kirino</a>
-            </div>
+                            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                    data-target=".navbar-responsive-collapse">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="/">Kirino</a>
+                        </div>
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                  <ul class="nav navbar-nav">
+                                  <li><a href="/admin/memorandums/">Memorandums</a></li>
+                                  </ul>
+                            </div>
         </div>
     </div>
 
