--- a/static/css/template.css
+++ b/static/css/template.css
@@ -1,1 +1,130 @@
-.form-horizontal{width:900px;margin:0 auto}.addNew{float:right;background-color:#3f51b5!important}.btn-primary{color:#3f51b5!important}.form-group.has-error1 .form-control{-webkit-box-shadow:none;box-shadow:none}.form-group.has-error1.is-focused .form-control{background-image:-webkit-gradient(linear,left top,left bottom,from(#f44336),to(#f44336)),-webkit-gradient(linear,left top,left bottom,from(#D2D2D2),to(#D2D2D2));background-image:-webkit-linear-gradient(#f44336,#f44336),-webkit-linear-gradient(#D2D2D2,#D2D2D2);background-image:-o-linear-gradient(#f44336,#f44336),-o-linear-gradient(#D2D2D2,#D2D2D2);background-image:linear-gradient(#f44336,#f44336),linear-gradient(#D2D2D2,#D2D2D2)}.form-group.has-error1 label.control-label,.form-group.has-error1 .help-block{color:#f44336}.conteiner_for_windows{margin:0 auto;display:inline;position:absolute;top:100px;left:15vw;background-color:transparent;overflow:visible;z-index:270}.window{display:none;z-index:270;background-color:#fff;box-shadow:0 3px 9.2px .8px rgba(0,0,0,0.2);width:70vw;color:#2d2d2d;font-size:16px;font-weight:400;line-height:24px;text-align:center;margin:0 auto;padding:100px 85px 79px 82px}.window .closee:hover{background-image:url(/static/krest.png)}.window .closee{display:block;position:relative;float:right;z-index:270;width:20px;height:20px;background-image:url(/static/close.png);background-size:cover;top:-60px;right:-50px;cursor:pointer}#black-block{display:none;position:fixed;min-width:100%;min-height:100%;z-index:269;opacity:.8;top:0;transition:all .5s ease 0}.blurt{-webkit-filter:blur(10px);-moz-filter:blur(10px);-o-filter:blur(10px);-ms-filter:blur(10px);filter:blur(10px)}.nooverflow{position:relative;overflow:hidden}.menu_help li a{padding-left:10px;padding-right:10px}.menu_help li:not(:last-child){margin-right:3px}.menu_help li{display:inline-block;position:relative;overflow:hidden;top:-40px;padding:0;z-index:270}#info_win7,#info_win8,#info_mac,#info_android,#info_ios{display:block}.info_sl img{display:block;position:relative;overflow:hidden;margin:20px auto}#cancel{display:none}
+.form-horizontal {
+    width: 900px;
+    margin: 0 auto
+}
+
+.addNew {
+    float: right;
+    background-color: #3f51b5 !important
+}
+
+.btn-primary {
+    color: #3f51b5 !important
+}
+
+.form-group.has-error1 .form-control {
+    -webkit-box-shadow: none;
+    box-shadow: none
+}
+
+.form-group.has-error1.is-focused .form-control {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f44336), to(#f44336)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+    background-image: -webkit-linear-gradient(#f44336, #f44336), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+    background-image: -o-linear-gradient(#f44336, #f44336), -o-linear-gradient(#D2D2D2, #D2D2D2);
+    background-image: linear-gradient(#f44336, #f44336), linear-gradient(#D2D2D2, #D2D2D2)
+}
+
+.form-group.has-error1 label.control-label, .form-group.has-error1 .help-block {
+    color: #f44336
+}
+
+.conteiner_for_windows {
+    margin: 0 auto;
+    display: inline;
+    position: absolute;
+    top: 100px;
+    left: 15vw;
+    background-color: transparent;
+    overflow: visible;
+    z-index: 270
+}
+
+.window {
+    display: none;
+    z-index: 270;
+    background-color: #fff;
+    box-shadow: 0 3px 9.2px .8px rgba(0, 0, 0, 0.2);
+    width: 70vw;
+    color: #2d2d2d;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 100px 85px 79px 82px
+}
+
+.window .closee:hover {
+    background-image: url(/static/krest.png)
+}
+
+.window .closee {
+    display: block;
+    position: relative;
+    float: right;
+    z-index: 270;
+    width: 20px;
+    height: 20px;
+    background-image: url(/static/close.png);
+    background-size: cover;
+    top: -60px;
+    right: -50px;
+    cursor: pointer
+}
+
+#black-block {
+    display: none;
+    position: fixed;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 269;
+    opacity: .8;
+    top: 0;
+    transition: all .5s ease 0
+}
+
+.blurt {
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -o-filter: blur(10px);
+    -ms-filter: blur(10px);
+    filter: blur(10px)
+}
+
+.nooverflow {
+    position: relative;
+    overflow: hidden
+}
+
+.menu_help li a {
+    padding-left: 10px;
+    padding-right: 10px
+}
+
+.menu_help li:not(:last-child) {
+    margin-right: 3px
+}
+
+.menu_help li {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    top: -40px;
+    padding: 0;
+    z-index: 270
+}
+
+#info_win7, #info_win8, #info_mac, #info_android, #info_ios {
+    display: block
+}
+
+.info_sl img {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    margin: 20px auto
+}
+
+#cancel {
+    display: none
+}
