--- a/templates/html/checkMemorandum.tmpl.html
+++ b/templates/html/checkMemorandum.tmpl.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <a style="text-align:center;display: block;" href="/admin/checkMemorandum/add/{{ .Id }}">Add memorandum</a>
+    <a style="text-align:center;display: block;" href="/admin/checkMemorandum/add/{{ .MemorandumId }}">Add memorandum</a>
 
     <table class="table table-striped table-hover ">
       <thead>
