--- a/templates/html/memorandums.tmpl.html
+++ b/templates/html/memorandums.tmpl.html
@@ -39,7 +39,7 @@
       </tr>
       </thead>
       <tbody>
-      {{ range .Memorandums}}
+      {{ range . }}
       <tr>
         <td>{{ .Id }}</td>
         <td>{{ .UserCount }}</td>
