--- a/templates/html/checkMemorandum.tmpl.html
+++ b/templates/html/checkMemorandum.tmpl.html
@@ -43,7 +43,7 @@
       <tbody>
       {{ range .Clients}}
       <tr>
-        <td>{{ .MacAddr }}</td>
+        <td>{{ .MacAddress }}</td>
         <td>{{ .UserName }}</td>
         <td>{{ .PhoneNumber }}</td>
         <td>{{ .Accepted }}</td>
