--- a/templates/html/admin.tmpl.html
+++ b/templates/html/admin.tmpl.html
@@ -24,10 +24,34 @@
         </div>
     </div>
 
-    <form action="/admin/login/" method="post">
-        <input type="text" name="login">
-        <input type="password" name="password">
-        <input type="submit">
+    <form class="form-horizontal form-cont" action="/admin/login/" method="post">
+        <fieldset>
+            <legend>Login</legend>
+            <div class="form-group">
+                <!--input type="text" name="login"-->
+                <label for="inputLogin" class="col-md-2 control-label">Login</label>
+
+                <div class="col-md-10">
+                    <input type="login" name="login" class="form-control" id="inputLogin" >
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword" class="col-md-2 control-label">Password</label>
+
+                <div class="col-md-10">
+                    <input type="password" name="password" class="form-control" id="inputPassword">
+
+                    <!--input type="password" name="password"-->
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10 col-md-offset-2">
+                    <button type="submit" class="btn btn-primary left">Submit</button>
+                    <!--input type="submit"-->
+                </div>
+            </div>
+
+        </fieldset>
     </form>
 
 </div>
