--- a/templates/html/checkMemorandum.tmpl.html
+++ b/templates/html/checkMemorandum.tmpl.html
@@ -21,36 +21,59 @@
                 </button>
                 <a class="navbar-brand" href="/">Kirino</a>
             </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                      <ul class="nav navbar-nav">
-                      <li><a href="/admin/memorandums/">Memorandums</a></li>
-                      </ul>
-                </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="/admin/memorandums/">Memorandums</a></li>
+                    <li><a href="/admin/users/">Users</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/admin/logout/">Logout</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <a style="text-align:center;display: block;" href="/admin/checkMemorandum/accept/{{ .MemorandumId }}">Add memorandum</a>
 
-    <table class="table table-striped table-hover ">
-      <thead>
-      <tr>
-        <th>Mac</th>
-        <th>User mane</th>
-        <th>Phone number</th>
-        <th>Accepted</th>
-      </tr>
-      </thead>
-      <tbody>
-      {{ range .Clients}}
-      <tr>
-        <td>{{ .MacAddress }}</td>
-        <td>{{ .UserName }}</td>
-        <td>{{ .PhoneNumber }}</td>
-        <td>{{ .Accepted }}</td>
-      </tr>
-      {{ end }}
-      </tbody>
-    </table>
+    <div style="width: 80%; margin: 0 auto">
+        <div class="btn-group btn-group-justified">
+            <a href="/admin/checkMemorandum/accept/{{ .MemorandumId }}" class="btn btn-success">Accept all users in memorandum</a>
+            <a href="/admin/checkMemorandum/reject/{{ .MemorandumId }}" class="btn btn-danger">Reject all users in memorandum</a>
+        </div>
+        <table class="table table-striped table-hover ">
+            <thead>
+            <tr>
+                <th>Mac</th>
+                <th>User mane</th>
+                <th>Phone number</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            {{ range .Clients}}
+            <tr {{if (eq .Accepted 1)}}class="success" {{end}} {{if (eq .Accepted 2)}}class="danger" {{end}}>
+                <td style="padding: 15px;">{{ .MacAddress }}</td>
+                <td style="padding: 15px;">{{ .UserName }}</td>
+                <td style="padding: 15px;">{{ .PhoneNumber }}</td>
+                <td><a href="/admin/checkMemorandum/accept/{{ .MemorandumId }}" style="margin: 0;"
+                       class="btn btn-success {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}Accepted
+                    {{else}}Accept{{end}}</a></td>
+                <td><a href="/admin/checkMemorandum/reject/{{ .MemorandumId }}" style="margin: 0;"
+                       class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
+                    {{else}}Reject{{end}}</a></td>
+                <td><a href="/admin/checkMemorandum/" style="margin: 0;" class="btn btn-primary">Edit</a></td>
+                {{if (eq .Disabled 0)}}
+                <td><a href="/admin/users/disable/{{ .MacAddress }}" style="margin: 0;" class="btn btn-danger">Disable</a></td>
+                {{else}}
+                <td><a href="/admin/users/enable/{{ .MacAddress }}" style="margin: 0;" class="btn btn-success">Enable</a></td>
+                {{end}}
+            </tr>
+            {{ end }}
+            </tbody>
+        </table>
+    </div>
 
 </div>
 <div id="black-block"></div>
