--- a/templates/html/memorandums.tmpl.html
+++ b/templates/html/memorandums.tmpl.html
@@ -24,6 +24,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/admin/memorandums/">Memorandums</a></li>
+                    <li><a href="/admin/users/">Users</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/admin/logout/">Logout</a></li>
                 </ul>
             </div>
         </div>
