--- a/templates/html/admin.tmpl.html
+++ b/templates/html/admin.tmpl.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Kirino - wifi_sl_gen application</title>
+    <title>Kirino</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
