--- a/templates/html/checkMemorandum.tmpl.html
+++ b/templates/html/checkMemorandum.tmpl.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Kirino - wifi_sl_gen application</title>
+    <title>Kirino - Check Memorandum</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
@@ -53,21 +53,21 @@
             </thead>
             <tbody>
             {{ range .Clients}}
-            <tr {{if (eq .Accepted 1)}}class="success" {{end}} {{if (eq .Accepted 2)}}class="danger" {{end}}>
+            <tr {{if (and (eq .Accepted 1) (ne .Disabled 1))}}class="success" {{end}} {{if (or (eq .Accepted 2) (eq .Disabled 1))}}class="danger" {{end}}>
                 <td style="padding: 15px;">{{ .MacAddress }}</td>
                 <td style="padding: 15px;">{{ .UserName }}</td>
                 <td style="padding: 15px;">{{ .PhoneNumber }}</td>
-                <td><a href="/admin/users/accept/{{ .MacAddress }}" style="margin: 0;"
+                <td><a href="/admin/users/accept/{{ .Id }}" style="margin: 0;"
                        class="btn btn-success {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}Accepted
                     {{else}}Accept{{end}}</a></td>
-                <td><a href="/admin/users/reject/{{ .MacAddress }}" style="margin: 0;"
+                <td><a href="/admin/users/reject/{{ .Id }}" style="margin: 0;"
                        class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
                     {{else}}Reject{{end}}</a></td>
                 <td><a href="/admin/checkMemorandum/" style="margin: 0;" class="btn btn-primary">Edit</a></td>
                 {{if (eq .Disabled 0)}}
-                <td><a href="/admin/users/disable/{{ .MacAddress }}" style="margin: 0;" class="btn btn-danger">Disable</a></td>
+                <td><a href="/admin/users/disable/{{ .Id }}" style="margin: 0;" class="btn btn-danger">Disable</a></td>
                 {{else}}
-                <td><a href="/admin/users/enable/{{ .MacAddress }}" style="margin: 0;" class="btn btn-success">Enable</a></td>
+                <td><a href="/admin/users/enable/{{ .Id }}" style="margin: 0;" class="btn btn-success">Enable</a></td>
                 {{end}}
             </tr>
             {{ end }}
