--- a/templates/html/index.tmpl.html
+++ b/templates/html/index.tmpl.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <a id="addNew" href="#" class="btn btn-raised btn-info addNew">Добавить устройство
+                <a id="addNew" href="#" class="btn btn-raised btn-info addNew">Добавить другое устройство
                     <div class="ripple-container"></div>
                 </a>
             </div>
