--- a/templates/html/memorandums.tmpl.html
+++ b/templates/html/memorandums.tmpl.html
@@ -46,16 +46,40 @@
             <tbody>
             {{ range . }}
             <tr {{if (eq .Accepted 1)}}class="success" {{end}} {{if (eq .Accepted 2)}}class="danger" {{end}}>
-                <td style="padding: 15px;">{{ .Id }}</td>
-                <td style="padding: 15px;">{{ .AddTime }}</td>
-                <td><a href="/admin/checkMemorandum/{{ .Id }}" style="margin: 0;" class="btn btn-info">Check
+                <td style="padding: 20px;">{{ .Id }}</td>
+                <td style="padding: 20px;">{{ .AddTime }}</td>
+                <td><a href="/admin/checkMemorandum/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-info">Check
                     memorandum</a></td>
-                <td><a href="/admin/checkMemorandum/accept/{{ .Id }}" style="margin: 0;"
+                <td><a href="/admin/checkMemorandum/accept/{{ .Id }}" style="margin: 5px 0 0;"
                        class="btn btn-success {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}Accepted
-                    {{else}}Accept memorandum{{end}}</a></td>
-                <td><a href="/admin/checkMemorandum/reject/{{ .Id }}" style="margin: 0;"
+                    {{else}}Accept memorandum{{end}}
+                </a>
+                </td>
+                <td><a href="/admin/checkMemorandum/reject/{{ .Id }}" style="margin: 5px 0 0;"
                        class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
                     {{else}}Reject memorandum{{end}}</a></td>
+                <td>
+                    <form>
+                        <div class="form-group" style="margin: 0">
+                            <label for="select111" class="col-md-2 control-label">Select</label>
+
+                            <div class="col-md-6">
+                                <select id="select111" class="form-control">
+                                    <option>Книит</option>
+                                    <option>Мех-мат</option>
+                                    <option>Физический факультет</option>
+                                    <option>ФНБМТ</option>
+                                    <option>СГУ</option>
+                                </select>
+                            </div>
+                            <div class="form-group" style="margin: 0">
+                                <div class="col-md-3">
+                                    <input type="submit" class="btn btn-primary" style="margin: 3px 0 0;padding: 10px">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </td>
             </tr>
             {{ end }}
             </tbody>
