--- a/templates/html/memorandums.tmpl.html
+++ b/templates/html/memorandums.tmpl.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/static/css/template.css">
+    <script>
+        window.onload = function () {
+            console.log("event");
+            var elements = document.getElementsByTagName('select');
+            for (var i = 0; i < elements.length; i++) {
+                elements[i].getAttribute('data-id');
+                for (var j = 0; j < elements[i].options.length; j++) {
+                    console.log("heh");
+                    debugger;
+                    if (elements[i].options[j].getAttribute("value") == elements[i].getAttribute('data-id'))
+                        elements[i].options[j].selected = true
+                }
+
+            }
+        }
+    </script>
 </head>
 <body>
 <div id="blurr">
@@ -32,8 +48,8 @@
             </div>
         </div>
     </div>
-    <div style="width: 80%; margin: 0 auto">
-        <table class="table table-striped table-hover ">
+    <div style="width: 80%; margin: 0 auto;min-width: 1320px">
+        <table class="table table-striped table-hover">
             <thead>
             <tr>
                 <th>Number</th>
@@ -44,7 +60,8 @@
             </tr>
             </thead>
             <tbody>
-            {{ range . }}
+            {{ $departments := .Departments }}
+            {{ range .Memorandums }}
             <tr {{if (eq .Accepted 1)}}class="success" {{end}} {{if (eq .Accepted 2)}}class="danger" {{end}}>
                 <td style="padding: 20px;">{{ .Id }}</td>
                 <td style="padding: 20px;">{{ .AddTime }}</td>
@@ -59,17 +76,16 @@
                        class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
                     {{else}}Reject memorandum{{end}}</a></td>
                 <td>
-                    <form>
+                    <form action="/admin/memorandums/save/{{ .Id }}" method="post">
                         <div class="form-group" style="margin: 0">
-                            <label for="select111" class="col-md-2 control-label">Select</label>
+                            <label for="select{{.Id}}" class="col-md-2 control-label">Select</label>
 
                             <div class="col-md-6">
-                                <select id="select111" class="form-control">
-                                    <option>Книит</option>
-                                    <option>Мех-мат</option>
-                                    <option>Физический факультет</option>
-                                    <option>ФНБМТ</option>
-                                    <option>СГУ</option>
+                                <select id="select{{.Id}}" data-id="{{.DepartmentId}}" class="form-control" name="department">
+                                    <option disabled selected>None</option>
+                                    {{range $department := $departments}}
+                                    <option value="{{$department.Id}}">{{$department.Name}}</option>
+                                    {{end}}
                                 </select>
                             </div>
                             <div class="form-group" style="margin: 0">
