--- a/templates/html/users.tmpl.html
+++ b/templates/html/users.tmpl.html
@@ -7,6 +7,22 @@
     <link type="text/css" rel="stylesheet" href="/static/css/template.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script>
+        window.onload = function () {
+            console.log("event");
+            var elements = document.getElementsByTagName('select');
+            for (var i = 0; i < elements.length; i++) {
+                elements[i].getAttribute('data-id');
+                for (var j = 0; j < elements[i].options.length; j++) {
+                    console.log("heh");
+                    debugger;
+                    if (elements[i].options[j].getAttribute("value") == elements[i].getAttribute('data-id'))
+                        elements[i].options[j].selected = true
+                }
+
+            }
+        }
+    </script>
 </head>
 <body>
 <div id="blurr">
@@ -34,7 +50,7 @@
     </div>
 
 
-    <div style="width: 80%; margin: 0 auto">
+    <div style="width: 90%; margin: 0 auto">
         <table class="table table-striped table-hover ">
             <thead>
             <tr>
@@ -48,23 +64,45 @@
             </tr>
             </thead>
             <tbody>
-            {{ range .}}
+            {{ $departments := .Departments }}
+            {{ range .Users}}
             <tr {{if (and (eq .Accepted 1) (ne .Disabled 1))}}class="success" {{end}} {{if (or (eq .Accepted 2) (eq .Disabled 1))}}class="danger" {{end}}>
-                <td style="padding: 15px;">{{ .MacAddress }}</td>
-                <td style="padding: 15px;">{{ .UserName }}</td>
-                <td style="padding: 15px;">{{ .PhoneNumber }}</td>
-                <td><a href="/admin/users/accept/{{ .Id }}" style="margin: 0;"
+                <td style="padding: 20px;">{{ .MacAddress }}</td>
+                <td style="padding: 20px;">{{ .UserName }}</td>
+                <td style="padding: 20px;">{{ .PhoneNumber }}</td>
+                <td><a href="/admin/users/accept/{{ .Id }}" style="margin: 5px 0 0;"
                        class="btn btn-success {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}Accepted
                     {{else}}Accept{{end}}</a></td>
-                <td><a href="/admin/users/reject/{{ .Id }}" style="margin: 0;"
+                <td><a href="/admin/users/reject/{{ .Id }}" style="margin: 5px 0 0;"
                        class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
                     {{else}}Reject{{end}}</a></td>
-                <!--td><a href="/admin/checkMemorandum/" style="margin: 0;" class="btn btn-primary">Edit</a></td-->
+                <td><a href="/admin/users/edit/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-primary">Edit</a></td>
                 {{if (eq .Disabled 0)}}
-                <td><a href="/admin/users/disable/{{ .Id }}" style="margin: 0;" class="btn btn-danger">Disable</a></td>
+                <td><a href="/admin/users/disable/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-danger">Disable</a></td>
                 {{else}}
-                <td><a href="/admin/users/enable/{{ .Id }}" style="margin: 0;" class="btn btn-success">Enable</a></td>
+                <td><a href="/admin/users/enable/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-success">Enable</a></td>
                 {{end}}
+                <td>
+                    <form action="/admin/users/savedept/{{ .Id }}" method="post">
+                        <div class="form-group" style="margin: 0">
+                            <label for="select{{.Id}}" class="col-md-2 control-label">Select</label>
+
+                            <div class="col-md-6">
+                                <select id="select{{.Id}}" data-id="{{.DepartmentId}}" class="form-control" name="department">
+                                    <option disabled selected>None</option>
+                                    {{range $department := $departments}}
+                                    <option value="{{$department.Id}}">{{$department.Name}}</option>
+                                    {{end}}
+                                </select>
+                            </div>
+                            <div class="form-group" style="margin: 0">
+                                <div class="col-md-3">
+                                    <input type="submit" class="btn btn-primary" style="margin: 3px 0 0;padding: 10px">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </td>
             </tr>
             {{ end }}
             </tbody>
