--- a/templates/html/user.tmpl.html
+++ b/templates/html/user.tmpl.html
@@ -70,6 +70,7 @@
 <script src="/static/js/ripples.min.js"></script>
 <script src="/static/js/material.min.js"></script>
 <script src="/static/js/jquery.maskedinput.min.js"></script>
+<script src="/static/js/template.js"></script>
 <script>$.material.init();</script>
 <script src="https://fezvrasta.github.io/snackbarjs/dist/snackbar.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js"></script>
