--- a/templates/html/generatedPdf.tmpl.html
+++ b/templates/html/generatedPdf.tmpl.html
@@ -31,7 +31,7 @@
         </div>
         {{end}}
 
-        {{if eq .ExistCount 0 }}
+        {{if ne .ExistCount 0 }}
         <div class="alert alert-dismissible alert-danger">
             Следующие MAC-адреса уже существуют в базе: {{range .Exist}}<br> {{.}} {{end}}
         </div>
