--- a/templates/html/users.tmpl.html
+++ b/templates/html/users.tmpl.html
@@ -67,22 +67,22 @@
                 <td style="padding: 20px;">{{ .MacAddress }}</td>
                 <td style="padding: 20px;">{{ .UserName }}</td>
                 <td style="padding: 20px;">{{ .PhoneNumber }}</td>
-                <td><a href="/admin/users/accept/{{ .Id }}" style="margin: 5px 0 0;"
-                       class="btn btn-success {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}Accepted
-                    {{else}}Accept{{end}}</a></td>
-                <td><a href="/admin/users/reject/{{ .Id }}" style="margin: 5px 0 0;"
-                       class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
-                    {{else}}Reject{{end}}</a></td>
-                <td><a href="/admin/user/edit/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-primary">Edit</a></td>
+                <td><a href="/admin/users/accept/{{ .Id }}"
+                       class="btn btn-success btn-on-table {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}<span class="glyphicon glyphicon-ok" aria-hidden="true">
+                    {{else}}<span class="glyphicon glyphicon-ok" aria-hidden="true">{{end}}</a></td>
+                <td><a href="/admin/users/reject/{{ .Id }}"
+                       class="btn btn-danger btn-on-table {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}<span class="glyphicon glyphicon-remove" aria-hidden="true">
+                    {{else}}<span class="glyphicon glyphicon-remove" aria-hidden="true">{{end}}</a></td>
+                <td><a href="/admin/user/edit/{{ .Id }}"  class="btn btn-primary btn-on-table"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
                 {{if (eq .Disabled 0)}}
-                <td><a href="/admin/users/disable/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-danger">Disable</a></td>
+                <td><a href="/admin/users/disable/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
                 {{else}}
-                <td><a href="/admin/users/enable/{{ .Id }}" style="margin: 5px 0 0;" class="btn btn-success">Enable</a></td>
+                <td><a href="/admin/users/enable/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
                 {{end}}
                 <td>
                     <form action="/admin/users/savedept/{{ .Id }}" method="post">
                         <div class="form-group" style="margin: 0">
-                            <label for="select{{.Id}}" class="col-md-2 control-label">Select</label>
+                            <label for="select{{.Id}}" class="col-md-2 control-label">Department</label>
 
                             <div class="col-md-6">
                                 <select id="select{{.Id}}" data-id="{{.DepartmentId}}" class="form-control" name="department">
@@ -94,7 +94,7 @@
                             </div>
                             <div class="form-group" style="margin: 0">
                                 <div class="col-md-3">
-                                    <input type="submit" class="btn btn-primary" style="margin: 3px 0 0;padding: 10px">
+                                    <input type="submit" class="btn btn-primary" value="save" style="margin: 3px 0 0;padding: 10px">
                                 </div>
                             </div>
                         </div>
