--- a/templates/html/users.tmpl.html
+++ b/templates/html/users.tmpl.html
@@ -63,21 +63,22 @@
             <tbody>
             {{ $departments := .Departments }}
             {{ range .Users}}
-            <tr {{if (and (eq .Accepted 1) (ne .Disabled 1))}}class="success" {{end}} {{if (or (eq .Accepted 2) (eq .Disabled 1))}}class="danger" {{end}}>
+            <tr {{if eq .Accepted 1}}class="success" {{end}} {{if eq .Accepted 2}}class="danger" {{end}}>
                 <td style="padding: 20px;">{{ .MacAddress }}</td>
                 <td style="padding: 20px;">{{ .UserName }}</td>
                 <td style="padding: 20px;">{{ .PhoneNumber }}</td>
-                <td><a href="/admin/users/accept/{{ .Id }}"
-                       class="btn btn-success btn-on-table {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}<span class="glyphicon glyphicon-ok" aria-hidden="true">
-                    {{else}}<span class="glyphicon glyphicon-ok" aria-hidden="true">{{end}}</a></td>
-                <td><a href="/admin/users/reject/{{ .Id }}"
-                       class="btn btn-danger btn-on-table {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}<span class="glyphicon glyphicon-remove" aria-hidden="true">
-                    {{else}}<span class="glyphicon glyphicon-remove" aria-hidden="true">{{end}}</a></td>
+                <td>
+                    {{if ne .Accepted 1}}
+                    <a href="/admin/users/accept/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
+                    {{else}}
+                    <a href="/admin/users/reject/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
+                    {{end}}
+                </td>
                 <td><a href="/admin/user/edit/{{ .Id }}"  class="btn btn-primary btn-on-table"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
                 {{if (eq .Disabled 0)}}
-                <td><a href="/admin/users/disable/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
+                <td><a href="/admin/users/disable/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
                 {{else}}
-                <td><a href="/admin/users/enable/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
+                <td><a href="/admin/users/enable/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
                 {{end}}
                 <td>
                     <form action="/admin/users/savedept/{{ .Id }}" method="post">
@@ -105,7 +106,25 @@
             </tbody>
         </table>
     </div>
-
+<div style="text-align: center; margin: 0 auto">
+    <div class="pagination">
+        {{with .Pagination}}
+        {{if ne .CurrentPage 1}}
+        <li><a href="/admin/users/">1</a></li>
+        {{end}}
+        {{if and (ne .PrevPage 0) (ne .PrevPage 1)}}
+        <li><a href="/admin/users/page/{{.PrevPage}}">{{.PrevPage}}</a></li>
+        {{end}}
+        <li class="active"><a href="/admin/users/page/{{.CurrentPage}}">{{.CurrentPage}}</a></li>
+        {{if ne .NextPage 0}}
+        <li><a href="/admin/users/page/{{.NextPage}}">{{.NextPage}}</a></li>
+        {{end}}
+        {{if ne .LastPage 0}}
+        <li><a href="/admin/users/page/{{.LastPage}}">{{.LastPage}}</a></li>
+        {{end}}
+        {{end}}
+    </div>
+</div>
 </div>
 <div id="black-block"></div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
