--- a/templates/html/generatedPdf.tmpl.html
+++ b/templates/html/generatedPdf.tmpl.html
@@ -21,6 +21,17 @@
                 </button>
                 <a class="navbar-brand" href="/">Kirino</a>
             </div>
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav">
+                    {{ if .IsAdmin }}
+                    <li><a href="/admin/memorandums/">Memorandums</a></li>
+                    <li><a href="/admin/users/">Users</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/admin/logout/">Logout</a></li>
+                    {{end}}
+                </ul>
+            </div>
         </div>
     </div>
 
