--- a/templates/html/user.tmpl.html
+++ b/templates/html/user.tmpl.html
@@ -23,7 +23,11 @@
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a id="tutorial" href="javascript:void(0)">Как узнать MAC-адрес</a></li>
+                    <li><a href="/admin/memorandums/">Memorandums</a></li>
+                    <li><a href="/admin/users/">Users</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/admin/logout/">Logout</a></li>
                 </ul>
             </div>
         </div>
