--- a/templates/html/checkMemorandum.tmpl.html
+++ b/templates/html/checkMemorandum.tmpl.html
@@ -7,6 +7,19 @@
     <link type="text/css" rel="stylesheet" href="/static/css/template.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script>
+        window.onload = function () {
+            var elements = document.getElementsByTagName('select');
+            for (var i = 0; i < elements.length; i++) {
+                elements[i].getAttribute('data-id');
+                for (var j = 0; j < elements[i].options.length; j++) {
+                    if (elements[i].options[j].getAttribute("value") == elements[i].getAttribute('data-id'))
+                        elements[i].options[j].selected = true
+                }
+
+            }
+        }
+    </script>
 </head>
 <body>
 <div id="blurr">
@@ -33,12 +46,36 @@
         </div>
     </div>
 
-
+    {{ $departments := .Departments }}
     <div style="width: 80%; margin: 0 auto">
+        {{with .Memorandum }}
         <div class="btn-group btn-group-justified">
-            <a href="/admin/checkMemorandum/accept/{{ .MemorandumId }}" class="btn btn-success">Accept all users in memorandum</a>
-            <a href="/admin/checkMemorandum/reject/{{ .MemorandumId }}" class="btn btn-danger">Reject all users in memorandum</a>
+
+            <a href="/admin/checkMemorandum/accept/{{ .Id }}" class="btn btn-success">Accept all users in memorandum</a>
+            <a href="/admin/checkMemorandum/reject/{{ .Id }}" class="btn btn-danger">Reject all users in memorandum</a>
         </div>
+        <div style="margin: 0 auto; text-align: center;width: 50%">
+        <form action="/admin/memorandums/save/{{ .Id }}" method="post">
+            <div class="form-group" style="margin: 0">
+                <label for="select{{.Id}}" class="col-md-2 control-label">Department</label>
+
+                <div class="col-md-6">
+                    <select id="select{{.Id}}" data-id="{{.DepartmentId}}" class="form-control" name="department">
+                        <option disabled selected>None</option>
+                        {{range $department := $departments}}
+                        <option value="{{$department.Id}}">{{$department.Name}}</option>
+                        {{end}}
+                    </select>
+                </div>
+                <div class="form-group" style="margin: 0">
+                    <div class="col-md-3">
+                        <input type="submit" class="btn btn-primary" value="save" style="margin: 3px 0 0;padding: 10px">
+                    </div>
+                </div>
+            </div>
+        </form>
+        </div>
+        {{end}}
         <table class="table table-striped table-hover ">
             <thead>
             <tr>
@@ -54,20 +91,42 @@
             <tbody>
             {{ range .Clients}}
             <tr {{if (and (eq .Accepted 1) (ne .Disabled 1))}}class="success" {{end}} {{if (or (eq .Accepted 2) (eq .Disabled 1))}}class="danger" {{end}}>
-                <td style="padding: 15px;">{{ .MacAddress }}</td>
-                <td style="padding: 15px;">{{ .UserName }}</td>
-                <td style="padding: 15px;">{{ .PhoneNumber }}</td>
-                <td><a href="/admin/users/accept/{{ .Id }}" style="margin: 0;"
-                       class="btn btn-success {{if (eq .Accepted 1)}}disabled {{end}}">{{if (eq .Accepted 1)}}Accepted
-                    {{else}}Accept{{end}}</a></td>
-                <td><a href="/admin/users/reject/{{ .Id }}" style="margin: 0;"
-                       class="btn btn-danger  {{if (eq .Accepted 2)}}disabled {{end}}">{{if (eq .Accepted 2)}}Rejected
-                    {{else}}Reject{{end}}</a></td>
-                <td><a href="/admin/user/edit/{{ .Id }}" style="margin: 0;" class="btn btn-primary">Edit</a></td>
+                <td style="padding: 20px;">{{ .MacAddress }}</td>
+                <td style="padding: 20px;">{{ .UserName }}</td>
+                <td style="padding: 20px;">{{ .PhoneNumber }}</td>
+                <td>
+                    <form action="/admin/users/savedept/{{ .Id }}" method="post">
+                        <div class="form-group" style="margin: 0">
+                            <label for="select{{.Id}}" class="col-md-2 control-label">Department</label>
+
+                            <div class="col-md-6">
+                                <select id="select{{.Id}}" data-id="{{.DepartmentId}}" class="form-control" name="department">
+                                    <option disabled selected>None</option>
+                                    {{range $department := $departments}}
+                                    <option value="{{$department.Id}}">{{$department.Name}}</option>
+                                    {{end}}
+                                </select>
+                            </div>
+                            <div class="form-group" style="margin: 0">
+                                <div class="col-md-3">
+                                    <input type="submit" class="btn btn-primary" value="save" style="margin: 3px 0 0;padding: 10px">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </td>
+                <td>
+                    {{if ne .Accepted 1}}
+                    <a href="/admin/users/accept/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
+                    {{else}}
+                    <a href="/admin/users/reject/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
+                    {{end}}
+                </td>
+                <td><a href="/admin/user/edit/{{ .Id }}"  class="btn btn-primary btn-on-table"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
                 {{if (eq .Disabled 0)}}
-                <td><a href="/admin/users/disable/{{ .Id }}" style="margin: 0;" class="btn btn-danger">Disable</a></td>
+                <td><a href="/admin/users/disable/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
                 {{else}}
-                <td><a href="/admin/users/enable/{{ .Id }}" style="margin: 0;" class="btn btn-success">Enable</a></td>
+                <td><a href="/admin/users/enable/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
                 {{end}}
             </tr>
             {{ end }}
