--- a/templates/html/memorandums.tmpl.html
+++ b/templates/html/memorandums.tmpl.html
@@ -59,16 +59,7 @@
             <tr {{if (eq .Accepted 1)}}class="success" {{end}} {{if (eq .Accepted 2)}}class="danger" {{end}}>
                 <td style="padding: 20px;">{{ .Id }}</td>
                 <td style="padding: 20px;">{{ .AddTime }}</td>
-                <td><a href="/admin/checkMemorandum/{{ .Id }}" class="btn btn-info btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
 
-
-                <td>
-                {{if ne .Accepted 1}}
-                    <a href="/admin/checkMemorandum/accept/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
-                {{else}}
-                    <a href="/admin/checkMemorandum/reject/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
-                {{end}}
-                </td>
 
                 <td>
 
@@ -92,6 +83,16 @@
                         </div>
                     </form>
                 </td>
+                <td><a href="/admin/checkMemorandum/{{ .Id }}" class="btn btn-info btn-on-table"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></a></td>
+
+
+                <td>
+                    {{if ne .Accepted 1}}
+                    <a href="/admin/checkMemorandum/accept/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
+                    {{else}}
+                    <a href="/admin/checkMemorandum/reject/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
+                    {{end}}
+                </td>
             </tr>
             {{ end }}
             </tbody>
@@ -105,7 +106,7 @@
                 {{if and (ne .PrevPage 0) (ne .PrevPage 1)}}
                 <li><a href="/admin/memorandums/page/{{.PrevPage}}">{{.PrevPage}}</a></li>
                 {{end}}
-                <li class="active"><a href="/admin/users/page/{{.CurrentPage}}">{{.CurrentPage}}</a></li>
+                <li class="active"><a href="/admin/memorandums/page/{{.CurrentPage}}">{{.CurrentPage}}</a></li>
                 {{if ne .NextPage 0}}
                 <li><a href="/admin/memorandums/page/{{.NextPage}}">{{.NextPage}}</a></li>
                 {{end}}
