--- a/templates/html/index.tmpl.html
+++ b/templates/html/index.tmpl.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Создание служебной записки - ПРЦНИТ СГУ</title>
+    <title>Доступ к WiFi сети СГУ</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Kirino</a>
+                <a class="navbar-brand" href="/">WiFi СГУ</a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
     </div>
     <form class="form-horizontal" action="/generatePdf/" method="post" id="fm">
         <fieldset id="form_cont">
-            <legend>Создание служебной записки</legend>
+            <legend>Формирование заявления на получение доступа к ИКС СГУ по технологии Wi-Fi.</legend>
             <div class="input_forms">
                 <h2 class='title'>Устройство #1</h2>
                 <div class="form-group">
