--- a/templates/html/generatedPdf.tmpl.html
+++ b/templates/html/generatedPdf.tmpl.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Служебная записка - ПРЦНИТ СГУ</title>
+    <title>Доступ к WiFi сети СГУ</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Kirino</a>
+                <a class="navbar-brand" href="/">WiFi СГУ</a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
     <div style="text-align:center;font-size:20px;width:80%;margin: 0 auto;">
         {{if ne .Count "0" }}
         <div class="alert alert-dismissible alert-success">
-          Ваша служебная записка готова. Вам нужно распечать её, подписать у руководителя Вашего подразделения и отнести в 108 кабинет 9 корпуса СГУ или в 225б кабинет 12 корпуса СГУ.
+          Ваше заявление готово.<br><br> Вам нужно распечать его, подписать у руководителя вашего подразделения и отнести в 106 кабинет 9 корпуса СГУ или в 225б кабинет 12 корпуса СГУ.<br><br> Доступ в Интернет появится после получения письменного заявления.<br> Используйте имя сети "ssu_internet" и пароль "Internet".
         </div>
         {{end}}
 
