--- a/templates/html/generatedPdf.tmpl.html
+++ b/templates/html/generatedPdf.tmpl.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="/static/css/template.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="height=device-height,width=device-width" />
 </head>
 <body>
 <div id="blurr">
