--- a/templates/html/memorandums.tmpl.html
+++ b/templates/html/memorandums.tmpl.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/static/css/template.css">
+    <meta name="viewport" content="height=device-height,width=device-width" />
     <script>
         window.onload = function () {
             var elements = document.getElementsByTagName('select');
