Fixed wrong buttons

--- a/templates/html/generatedPdf.tmpl.html
+++ b/templates/html/generatedPdf.tmpl.html
@@ -39,7 +39,7 @@
     <div style="text-align:center;font-size:20px;width:80%;margin: 0 auto;">
         {{if ne .Count "0" }}
         <div class="alert alert-dismissible alert-success">
-          Ваше заявление готово.<br><br> Вам нужно распечать его, подписать у руководителя вашего подразделения и отнести в 106 кабинет 9 корпуса СГУ или в 225б кабинет 12 корпуса СГУ.<br><br> Доступ в Интернет появится после получения письменного заявления.<br> Используйте имя сети "ssu_internet" и пароль "Internet".
+            Ваше заявление готово.<br><br> Вам нужно распечать его, подписать у руководителя вашего подразделения (для студентов - подписать в деканате вашего факультета) и отнести в 106 кабинет 9 корпуса СГУ или в 225б кабинет 12 корпуса СГУ.<br><br> Доступ в Интернет появится после получения письменного заявления.<br> Используйте имя сети "ssu_internet" и пароль "Internet".
         </div>
         {{end}}
 
