--- a/templates/html/users.tmpl.html
+++ b/templates/html/users.tmpl.html
@@ -98,9 +98,9 @@
                 </td>
                 <td>
                     {{if ne .Accepted 1}}
-                    <a href="/admin/users/accept/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
+                    <a href="/admin/users/accept/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
                     {{else}}
-                    <a href="/admin/users/reject/{{ .Id }}" class="btn btn-success btn-on-table"><span class="glyphicon glyphicon-ok" aria-hidden="true"></a>
+                    <a href="/admin/users/reject/{{ .Id }}" class="btn btn-danger btn-on-table"><span class="glyphicon glyphicon-remove" aria-hidden="true"></a>
                     {{end}}
                 </td>
                 <td><a href="/admin/user/edit/{{ .Id }}"  class="btn btn-primary btn-on-table"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
